[squash] Fixes variable name to fit better its purpose

--- a/css/_side_toolbar_container.scss
+++ b/css/_side_toolbar_container.scss
@@ -2,7 +2,7 @@
  * Toolbar side panel main container element.
  */
 #sideToolbarContainer {
-    background-color: $sideBarBackground;
+    background-color: $sideToolbarContainerBg;
     height: 100%;
     left: $defaultToolbarSize;
     max-width: $sidebarWidth;
